# finance_portfolio

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.claude/skills/assess-portfolio/: SKILL.md
.claude/skills/assess-portfolio/references/: cli-reference.md  data-schema.md  recipes.md  troubleshooting.md
.claude/skills/assess-portfolio/scripts/: add-transaction.sh  snapshot.py  snapshot.sh
data/: config.yaml  transactions.csv
docs/superpowers/plans/: 2026-04-19-portfolio-tracker.md
docs/superpowers/specs/: 2026-04-19-portfolio-tracker-design.md
src/portfolio/: cli.py  config.py  mutations.py  positions.py  prices.py  rebalance.py  transactions.py  valuation.py
tests/: test_config.py  test_mutations.py  test_positions.py  test_rebalance.py  test_transactions.py  test_valuation.py
