[project]
name = "portfolio"
version = "0.1.0"
description = "Private portfolio tracker for Trade Republic"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "streamlit>=1.35",
    "plotly>=5.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
portfolio = "portfolio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
